--- a/style.css
+++ b/style.css
@@ -1,34 +1,34 @@
-body {
-    background-image: url("index_background.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 20% 15%;
-}
+body{
+color: white;
 
-nav {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background-color: white;
-  }
-  
-  li, a, button {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: black;
-    text-decoration: none;
-  }
-  
-  span {
-    display: flex;
-    justify-content: space-between;
+}
+.BG{
+    position: fixed;
+    right: 0;
+    top: 10vh;
+    height: 50vh;
+    width: 50vw;
+}
+nav{
+   
+    position: fixed;
+    top: 0;
+    background: linear-gradient(to bottom, #ffffff, #dad9d9);
+    display: inline-flex;
+    width: 100vw;
+    height: 10vh;
+    right: 0;
+    left: 0;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 5px 10%;
-  }
-  
-  .nazov {
-    margin-left: 20%;
+    align-content: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    z-index: 999;
+}
+.nazov {
+    
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
     font-size: 200%;
@@ -37,71 +37,42 @@ nav {
     cursor: pointer;
     animation: colorChange 1.5s infinite alternate;
   }
+.nav_links {
+    display: flex;
+    justify-content: space-around;
+    
+    
+} 
+.nav_links a{
+    margin-left: 9vw;
+
+}
   
-  .cta {
-    margin-right: 20%;
-  }
-  
-  .nav_links {
-    list-style: none;
-    display: grid;
-    grid-auto-flow: column;
-    grid-gap: 15px;
-    padding: 0 10px;
-    overflow: hidden;
-  }
-  
-  .nav_links li a {
+  .nav_links  a {
     transition: all 0.3s ease 0s;
   }
   
-  .nav_links li a:hover {
+  .nav_links  a:hover {
     color: silver;
   }
   
   button {
-    padding: 9px 25px;
     background-color: white;
     border: none;
     border-radius: 50px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
+
   }
   
   button:hover {
     background-color: silver;
+    border-color: black;
   }
-  
-  @media screen and (max-width: 768px) {
-    .span {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .nazov {
-      margin-left: 0;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-  
-    .cta {
-      margin-right: 0;
-      text-align: center;
-    }
-  
-    .nav_links {
-      grid-auto-flow: row;
-      padding: 0;
-    }
-  
-    .nav_links li {
-      padding: 10px;
-    }
+a, button {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: black;
+    text-decoration: none;
   }
-  
-  @keyframes colorChange {
-    0% { color: black; }
-    50% { color: gray; }
-    100% { color: silver; }
-  }
-  
