--- a/style.css
+++ b/style.css
@@ -1,78 +1,307 @@
-body{
-color: white;
+/*Bar */
+.lista {
+  margin-left: -7px;
+  position: relative;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8));
+  display: inline-flex;
+  width: 120%;
+  height: 10vh;
+  flex-wrap: wrap;
+  align-items: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
 
-}
-.BG{
-    position: fixed;
-    right: 0;
-    top: 10vh;
-    height: 50vh;
-    width: 50vw;
-}
-nav{
-   
-    position: fixed;
-    top: 0;
-    background: linear-gradient(to bottom, #ffffff, #dad9d9);
-    display: inline-flex;
-    width: 100vw;
-    height: 10vh;
-    right: 0;
-    left: 0;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-    z-index: 999;
-}
 .nazov {
-    
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    font-size: 200%;
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-    animation: colorChange 1.5s infinite alternate;
-  }
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  letter-spacing: 1%;
+  font-size: 200%;
+  color: red;
+  text-decoration: none;
+  cursor: pointer;
+  margin-right: 10%;
+  margin-left: 2%;
+}
+
 .nav_links {
-    display: flex;
-    justify-content: space-around;
-    
-    
-} 
-.nav_links a{
-    margin-left: 9vw;
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav_links a {
+  margin-left: 10vw;
+}
+
+.nav_links a, button {
+  transition: all 0.3s ease 0s;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: black;
+  text-decoration: none;
+}
+
+.nav_links a:hover {
+  color: silver;
+}
+
+/*index*/
+
+body.index {
+  position: relative;
+  background-image: url("chilli-mania-logo.png");
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center 35%;
+  background-attachment: fixed;
+}
+
+/*top 10 chilli*/
+
+.centred {
+  margin-left: 10%;
+  margin-right: 10%;
+  text-align: center;
+  position: relative;
+}
+
+img#expe {
+  position: relative;
+  margin-top: 2%;
+  border: 0;
+  margin-left: 10%;
+  margin-right: 10%;
+  width: 80%;
+  height: 80%;
+}
+
+body.top10 table {
+  border-radius: 15px;
+  background-image: linear-gradient(rgb(255, 255, 255), rgb(252, 0, 0));
 
 }
-  
-  .nav_links  a {
-    transition: all 0.3s ease 0s;
-  }
-  
-  .nav_links  a:hover {
-    color: silver;
-  }
-  
-  button {
-    background-color: white;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
 
-  }
-  
-  button:hover {
-    background-color: silver;
-    border-color: black;
-  }
-a, button {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: black;
-    text-decoration: none;
-  }
+h1.top10 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 100px;
+}
+
+nav#kotvy1 {
+  text-align: left;
+  border: 1px solid #aaa;
+  border-radius: 15px;
+  display: table;
+  position: relative;
+  width: 20%;
+  height: 20%;
+  background-image: linear-gradient(rgb(255, 255, 255), rgb(247, 7, 7));
+  color: black;
+  margin-right: 2%;
+}
+
+nav#kotvy1 h3{
+  margin-left: 5%;
+}
+
+nav#kotvy1 li {
+  margin-bottom:4% ;
+}
+
+body.top10 table {
+  text-align: left;
+  width: 20%;
+  height: 20%;
+  border-collapse: separate;
+  border-spacing: 5px;
+  margin-left: 2%;
+}
+
+.kontainer {
+  display: flex;
+  margin-bottom: 2%;
+  margin-top:2% ;
+}
+
+img.ramcek {
+  border-style: solid;
+  border-color: black;
+  width: 60%;
+  height: 60%;
+}
+
+body.top10 h2 {
+  font-size: 400%;
+}
+
+/*recepty*/
+
+.kontainer2 {
+  display: flex;
+  justify-content: center;
+}
+
+.card {
+  width: 20%;
+  height: 600px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  margin: 5%;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+}
+
+.card-obsah {
+  padding: 20px;
+}
+
+
+/*rast*/
+nav#kotvy2 {
+  border: 1px solid #aaa;
+  border-radius: 15px;
+  display: table;
+  position: relative;
+  width: 18%;
+  height: 20%;
+  background-image: linear-gradient(rgb(255, 255, 255), rgb(7, 247, 19));
+  color: black;
+  padding-right: 10%;
+}
+
+.kontainer3 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 100px;
+  grid-row-gap: 0px; 
+}
+
+.vlastna {
+  list-style-type: none
+}
+
+
+.vlastna_zarazka {
+  background: url("vlastna_vec.png") no-repeat left top;
+  height: 34px;
+  padding-top: 7px;
+  padding-left: 44px;
+}
+
+nav#kotvy2 h2 {
+  margin-left: 15px;
+  text-shadow: none;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+nav#kotvy2 li {
+  margin-bottom:4% ;
+}
+
+body.grow li {
+    margin-bottom:1% ;
+}
+
+body.grow h1{
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-shadow: 2px 2px #ff0000;
+}
+
+body.grow h2 {
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  text-shadow: 2px 2px #fffb00;
+}
+
+.rastucechilli {
+  margin-top: 2%;
+  width: 60%;
+  height:5%;
+  position: relative;
+  margin-left: 20%;
+  box-shadow: 2px 2px 5px #ff0000;
+  margin-bottom: 2%;
+  z-index: -1;
+}
+
+body.grow h1#nazov{
+  font-size: 400%;
+  position: relative;
+  margin-left: 30%;
+  text-shadow: 0;
+}
+
+/*southernhot*/
+
+#obrazoksouthern {
+  margin-top: 2%;
+  width: 30%;
+  height: 30%;
+}
+
+.kontainer4 {
+  display: flex;
+}
+
+/*papaya*/
+
+.obrazokpaapy {
+  margin-top: 2%;
+  width: 30%;
+  height: 30%;
+}
+
+.kontainer5 {
+  display: flex;
+}
+
+
+/*hotpeper*/
+
+#obrazokpepper {
+  margin-top: 2%;
+  width: 40%;
+  height: 40%;
+}
+
+.kontainer6 {
+  display: flex;
+}
+
+/*cele*/
+
+p , li , table {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 120%;
+}
+
+a {
+  color: black;
+}
+
+footer {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+}
+
+
+/*special*/
+.duck{
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  top: 0;
+  right: 0;
+
+}
+.blood{
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  display: none;
+}
