--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   position: relative;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8));
   display: inline-flex;
-  width: 120%;
+  width: 100vw;
   height: 10vh;
   flex-wrap: wrap;
   align-items: center;
@@ -15,7 +15,7 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 500;
   letter-spacing: 1%;
-  font-size: 200%;
+  font-size: 3.5vw;
   color: red;
   text-decoration: none;
   cursor: pointer;
@@ -36,7 +36,7 @@
   transition: all 0.3s ease 0s;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 2vw;
   color: black;
   text-decoration: none;
 }
@@ -54,6 +54,10 @@ body.index {
   background-repeat: no-repeat;
   background-position: center 35%;
   background-attachment: fixed;
+  height: 100vh;
+  width: 100vw;
+  overflow:hidden;
+  
 }
 
 /*top 10 chilli*/
@@ -90,10 +94,9 @@ nav#kotvy1 {
   text-align: left;
   border: 1px solid #aaa;
   border-radius: 15px;
-  display: table;
+  display: flex;
   position: relative;
-  width: 20%;
-  height: 20%;
+
   background-image: linear-gradient(rgb(255, 255, 255), rgb(247, 7, 7));
   color: black;
   margin-right: 2%;
@@ -104,7 +107,7 @@ nav#kotvy1 h3{
 }
 
 nav#kotvy1 li {
-  margin-bottom:4% ;
+  margin-bottom:18% ;
 }
 
 body.top10 table {
@@ -118,6 +121,8 @@ body.top10 table {
 
 .kontainer {
   display: flex;
+  text-align: center;
+  justify-content: center;
   margin-bottom: 2%;
   margin-top:2% ;
 }
@@ -164,13 +169,15 @@ body.top10 h2 {
 nav#kotvy2 {
   border: 1px solid #aaa;
   border-radius: 15px;
-  display: table;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  width: 18%;
-  height: 20%;
+  height: fit-content;
   background-image: linear-gradient(rgb(255, 255, 255), rgb(7, 247, 19));
   color: black;
   padding-right: 10%;
+  grid-area: 1 / 2 / 2 / 3;
 }
 
 .kontainer3 {
@@ -227,12 +234,22 @@ body.grow h2 {
   margin-bottom: 2%;
   z-index: -1;
 }
+.obsah{
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
 
 body.grow h1#nazov{
   font-size: 400%;
   position: relative;
-  margin-left: 30%;
+  display: flex;
+  justify-content: center;
+  text-align: center;
   text-shadow: 0;
+}
+ul{
+  border: 1px solid #ff0000;
+  
 }
 
 /*southernhot*/
@@ -288,8 +305,9 @@ footer {
   right: 0;
   bottom: 0;
 }
-
-
+a{
+  text-decoration: none;
+}
 /*special*/
 .duck{
   height: 50px;
